src/main/javacc/PostFixExprParse.jj
options {
    //Hier können noch Optionen stehen z.B. static
    STATIC = false;
}

PARSER_BEGIN(PostFixExprParse) //Hier muss der Klassenname stehen
package parser;

import JavaClassFileGenerator.CodeGen;
import JavaClassFileGenerator.JavaClassFileGenerator;
import JavaClassFileGenerator.MethodObject;
import parser.exceptions.ParseException;import symbolTable.SymbolTable;
import parser.exceptions.LWertException;

public class PostFixExprParse {
    private final SymbolTable st = new SymbolTable();
    private final CodeGen code = new CodeGen(st);

    public static void main (String[] args) {
        PostFixExprParse parser = new PostFixExprParse(System.in);
        try {
            parser.program(); //Aufruf mit Startsymbol
            String mainHex = parser.code.finishMain();
            System.out.println(mainHex);
            JavaClassFileGenerator jcfg = new JavaClassFileGenerator("generated/Main", true, true, true);
            MethodObject mainMethod = new MethodObject("main", 1, mainHex);
            jcfg.generateClassFile(mainMethod);
        } catch (ParseException e) {
            System.err.println(e);
        }
    }
}}
}
PARSER_END(PostFixExprParse)

SKIP: {
      " " //Blank
      | "\r" //Wagenrücklauf (return)
      | "\n" //Neue Zeile (new line)
      | "\t" //Tabulator
}

TOKEN: {
    < INT : "int" > //Schlüsselwort
    | < FINAL : "final" > //& später "int" einsetzen
    | < PRINT : "print" > // VOR IDENT!
    | < IF : "if" > // VOR IDENT!
    | < ELSE : "else" > // VOR IDENT!
    | < WHILE : "while" > // VOR IDENT!
    | < IDENT : ["a"-"z"] (["a"-"z","A"-"Z","0"-"9"])* >
    | < NUMBER : "0" | (["1"-"9"] (["0"-"9"])*) >
    | < PLUS   : "+" >
    | < MINUS  : "-" >
    | < MULT   : "*" >
    | < DIV    : "/" >
    | < KLAMMERAUF : "(" >
    | < KLAMMERZU : ")" >
    | < CURLYAUF : "{" >
    | < CURLYZU : "}" >
    | < EQUAL : "=" >
    | < COMMA : "," >
    | < SEMICOLON : ";" >
    | < EQ : "==" >
    | < NE : "!=" >
    | < GE : ">=" >
    | < LE : "<=" >
    | < GT : ">"  >
    | < LT : "<"  >
}

void program() throws LWertException: {} {
    constDecl()
    varDecl()
    statement()
    <EOF>
}

void constDecl(): {} {
    ( <FINAL> <INT> constZuw() constList() <SEMICOLON> )?
}

void constZuw(): { Token ident; Token number; } {
  ident=<IDENT> <EQUAL> number=<NUMBER>
  { st.addConstant(ident.image, Integer.parseInt(number.image)); }
}

void constList(): {} {
    ( <COMMA> constZuw() constList() )?
}

void varDecl(): { Token ident; } {
    ( <INT> ident=<IDENT> { st.addVariable(ident.image); } varZuw(ident) varList() <SEMICOLON> )?
}

void varZuw(Token ident): { Token number; } {
    ( <EQUAL> number=<NUMBER> { code.initVar(ident.image, Integer.parseInt(number.image)); } )
    | {code.initVar(ident.image, 0);}
}

void varList(): { Token ident; } {
    ( <COMMA> ident=<IDENT> { st.addVariable(ident.image); } varZuw(ident) varList() )?
}

void expression(): {} {
    term() summe()
}

void summe(): {} {
    ( <PLUS>  term() { code.add(); } summe()
    | <MINUS> term() { code.sub(); } summe()
    )?
}

void term(): {} {
    faktor() product()
}

void product(): {} {
    ( <MULT> faktor() { code.mul(); } product()
    | <DIV>  faktor() { code.div(); } product()
    )?
}

void faktor(): { Token n; Token ident; } {
    n=<NUMBER> { code.push(Integer.parseInt(n.image)); }
  | ident=<IDENT> { code.load(ident.image); }
  | <KLAMMERAUF> expression() <KLAMMERZU>
}

int condition(): { Token op; int jumpPlaceholder; } {
  expression()
  ( op=<EQ> | op=<NE> | op=<GE> | op=<GT> | op=<LE> | op=<LT> )
  expression()
  {
    switch (op.kind) {
      case EQ: jumpPlaceholder = code.if_icmpne(); break; // a==b  -> springe, wenn a!=b
      case NE: jumpPlaceholder = code.if_icmpeq(); break; // a!=b  -> springe, wenn a==b
      case LT: jumpPlaceholder = code.if_icmpge(); break; // a<b   -> springe, wenn a>=b
      case GE: jumpPlaceholder = code.if_icmplt(); break; // a>=b  -> springe, wenn a<b
      case GT: jumpPlaceholder = code.if_icmple(); break; // a>b   -> springe, wenn a<=b
      case LE: jumpPlaceholder = code.if_icmpgt(); break; // a<=b  -> springe, wenn a>b
      default: throw new ParseException("wrong condition token");
    }
    { return jumpPlaceholder; }
  }
}

void statement() throws LWertException: { Token ident; int falseJump; int endJump; int loopStart; } {
    ident=<IDENT> <EQUAL> expression() <SEMICOLON>
    {
      if (!st.isVar(ident.image)) {
        throw new LWertException("Zuweisung auf Konstante: " + ident.image);
      }
      code.store(ident.image);
    }
    | // print
        <PRINT> <KLAMMERAUF> expression() <KLAMMERZU> <SEMICOLON>
        { code.print(); }
    | // Block { ... }
        <CURLYAUF> stmtLIST() <CURLYZU>
    | // if-else
        <IF> falseJump=condition() statement()
        optElse(falseJump)
  | // while ... S
    <WHILE>
    {
      loopStart = code.pc(); // Start der Schleife merken
    }
    falseJump=condition() statement()
    {
      // Mit GOTO zurück zum Schleifenanfang (per Platzhalter + Patch)
      int back = code.ifFalse_goto();
      code.patchJumpPlaceholder(back, loopStart);

      // false-Zweig (Abbruch) auf hier patchen
      code.patchJumpPlaceholder(falseJump, code.pc());
    }
}

void optElse(int falseJump) throws LWertException: { boolean hasElse = false; int endJump = -1; } {
    ( <ELSE>
        {
        hasElse = true;
        // False der Bedingung landet am Anfang von else:
        endJump = code.ifFalse_goto();
        code.patchJumpPlaceholder(falseJump, code.pc());
    }
    statement()
    {
        // nach else-Block: (skip else wenn Bedingung true)
        code.patchJumpPlaceholder(endJump, code.pc());
    }
    )?
    {
        if (!hasElse) {
            // kein else: False-Zweig fällt hinter das THEN – hier patchen
            code.patchJumpPlaceholder(falseJump, code.pc());
        }
    }
}

void stmtLIST() throws LWertException: {} {
  ( statement() stmtLIST() )?
}
